--- a/Appearance.html
+++ b/Appearance.html
@@ -86,6 +86,7 @@
 <p><a href="#toc" target="_self">Topics</a>
 
 <!-- <script>com_bigcatos_doDarkMode( -2 );</script> -->
+<!-- <script>alert("Alert Test");</script> -->
 
 	</body>
 </html>
