--- a/Appearance.html
+++ b/Appearance.html
@@ -48,6 +48,17 @@
 <details>
 <summary><font size=4><a name="new">What's New?</a></font></summary>
 
+<p><b>1.3 - 2018.12.12</b>
+<ul>
+    <li>Reduce number of #if - #endif statements by changing explicit types to id and consolidating code.
+    <li>Add AppearanceX / Export menu item to export Appearance.* suite with proper version numbers.
+    <li>Sandbox AppearanceX.
+</ul>
+
+<p><b>1.2 - 2018.12.10</b>
+<ul>
+    <li>Bug fixes: light mode " " --> ""; close Help window when App quites.
+</ul>
 
 <p><b>1.1 - 2018.12.08</b>
 <ul>
