--- a/Appearance.html
+++ b/Appearance.html
@@ -50,9 +50,12 @@
 
 <p><b>1.3 - 2018.12.12</b>
 <ul>
+    <li>AppearanceX starts with its appearance matching macOS's appearance, although typing "a" or touching the Appearance icon still temporarily toggles the App's appearance.
+    <li>AppearanceX also responds to a System Preferences Appearance change.
     <li>Reduce number of #if - #endif statements by changing explicit types to id and consolidating code.
     <li>Add AppearanceX / Export menu item to export Appearance.* suite with proper version numbers.
     <li>Sandbox AppearanceX.
+    <li>Add App icons.
 </ul>
 
 <p><b>1.2 - 2018.12.10</b>
