--- a/Appearance.html
+++ b/Appearance.html
@@ -48,6 +48,11 @@
 <details>
 <summary><font size=4><a name="new">What's New?</a></font></summary>
 
+<p><b>1.4 - 2019.03.21</b>
+<ul>
+    <li>Suppress macOS alert beep when 'a' key pressed.
+</ul>
+
 <p><b>1.3 - 2018.12.12</b>
 <ul>
     <li>AppearanceX starts with its appearance matching macOS's appearance, although typing "a" or touching the Appearance icon still temporarily toggles the App's appearance.
