--- a/Appearance.html
+++ b/Appearance.html
@@ -30,6 +30,7 @@
 
 <div style="position:relative; top:-130px; ">
 <p>Simple Light / Dark / JavaScript / HTML / Objective-C  Appearance code for iOS, macOS and Safari.
+Touch the Appearance icon to toggle the window's appearance, or type 'a'.
 
  <div id=com_bigcatos_darkModeHelpDiv></div>
  
@@ -47,6 +48,12 @@
 
 <details>
 <summary><font size=4><a name="new">What's New?</a></font></summary>
+
+<p><b>1.5 - 2019.03.21</b>
+<ul>
+    <li>Suppress all macOS alert beeps when 'a' key pressed.
+    <LI>Properly catch errors when removing the Help div and updating user defaults.
+</ul>
 
 <p><b>1.4 - 2019.03.21</b>
 <ul>
@@ -88,7 +95,16 @@
 
 <p><a href="#toc" target="_self">Topics</a>
 
+<!-- -->
+<!-- -->
+
+<!-- For HTML testing enable the following line to explicity execute doDarkMode().                                -->
+<!-- For App testing doDarkMode() is automatically called by the Objective-C wrapper, disable the following line. -->
 <!-- <script>com_bigcatos_doDarkMode( -2 );</script> -->
+
+<!-- -->
+<!-- -->
+
 <!-- <script>alert("Alert Test");</script> -->
 
 	</body>
