--- a/Appearance.html
+++ b/Appearance.html
@@ -41,7 +41,7 @@ Touch the Appearance icon to toggle the window's appearance, or type 'a'.
 <summary><font size=4><a name="intro">Appearance.txt</a></font></summary>
 
 
-<embed src="Appearance.txt" style="width:100%; height:350px; background:lightgray; "> </embed>
+<object width=960 height=710 type="text/plain" data="Appearance.txt" border="1" > </object>
 
 <p><a href="#toc" target="_self">Topics</a>
 </details>
