--- a/Appearance.html
+++ b/Appearance.html
@@ -49,6 +49,11 @@ Touch the Appearance icon to toggle the window's appearance, or type 'a'.
 <details>
 <summary><font size=4><a name="new">What's New?</a></font></summary>
 
+<p><b>1.6 - 2019.03.23</b>
+<ul>
+    <li>Re-enable Solar Coaster blue/cyan toggle code.
+</ul>
+
 <p><b>1.5 - 2019.03.21</b>
 <ul>
     <li>Suppress all macOS alert beeps when 'a' key pressed.
