--- a/Appearance.html
+++ b/Appearance.html
@@ -99,6 +99,7 @@ Touch the Appearance icon to toggle the window's appearance, or type 'a'.
 <ul>
     <li>Keep logs cleaner, check for undefined elements.
     <li>Help div timeout halved to 5 seconds.
+    <li>Build run script updates version/build in Appearance.html in debug mode.
 </ul>
 
 <p><b>1.7 - 2019.07.03</b>
