--- a/Appearance.html
+++ b/Appearance.html
@@ -32,7 +32,7 @@
 <p>Simple Light / Dark / JavaScript / HTML / Objective-C  Appearance code for iOS, macOS and Safari.
 Touch the Appearance icon to toggle the window's appearance, or type 'a'.
 
-<div id=com_bigcatos_darkModeHelpDiv></div>
+<div id=com_bigcatos_darkModeHelpDiv style="display"none; "></div>
  
 <p><b><font size=4 color="#21adff"><a>Topics</a></font></b>
 
@@ -50,7 +50,7 @@ Touch the Appearance icon to toggle the window's appearance, or type 'a'.
             <li>Image onclick:<br>
                 <b>onclick="com_bigcatos_doDarkMode( event )"</b>
             <li>Inject help div:<br>
-                <b>&lt;div id=com_bigcatos_darkModeHelpDiv&gt;&lt;/div&gt;</b>
+                <b>&lt;div id=com_bigcatos_darkModeHelpDiv style="display:none; "&gt;&lt;/div&gt;</b>
             <li>Initialization:<br>
                 <ul>
                     <li>If not using the Appearance Objective-c wrapper, e.g. a straight HTML page, you must explicitly initialize  <i>immediately before the &lt;/body&gt; statement</i>:<br>
