--- a/Appearance.html
+++ b/Appearance.html
@@ -95,6 +95,11 @@ Touch the Appearance icon to toggle the window's appearance, or type 'a'.
 <details>
 <summary><font size=4><a name="new">What's New?</a></font></summary>
 
+<p><b>2.2 - 2019.08.05</b>
+<ul>
+<li>Transition color change, currently linear.
+</ul>
+
 <p><b>2.1 - 2019.08.05</b>
 <ul>
 <li>Hide Help div using display rather than opacity.
