--- a/Appearance.html
+++ b/Appearance.html
@@ -32,7 +32,7 @@
 <p>Simple Light / Dark / JavaScript / HTML / Objective-C  Appearance code for iOS, macOS and Safari.
 Touch the Appearance icon to toggle the window's appearance, or type 'a'.
 
-<div id=com_bigcatos_darkModeHelpDiv style="display"none; "></div>
+<div id=com_bigcatos_darkModeHelpDiv style="display:none; "></div>
  
 <p><b><font size=4 color="#21adff"><a>Topics</a></font></b>
 
@@ -95,9 +95,14 @@ Touch the Appearance icon to toggle the window's appearance, or type 'a'.
 <details>
 <summary><font size=4><a name="new">What's New?</a></font></summary>
 
+<p><b>2.3 - 2019.08.10</b>
+<ul>
+    <li>Fix typo in Appearance.html.
+</ul>
+
 <p><b>2.2 - 2019.08.05</b>
 <ul>
-<li>Transition color change, currently linear.
+    <li>Transition color change, currently linear.
 </ul>
 
 <p><b>2.1 - 2019.08.05</b>
