--- a/Appearance.html
+++ b/Appearance.html
@@ -95,6 +95,11 @@ Touch the Appearance icon to toggle the window's appearance, or type 'a'.
 <details>
 <summary><font size=4><a name="new">What's New?</a></font></summary>
 
+<p><b>2.4 - 2019.08.13</b>
+<ul>
+    <li>Untested: revert to loadHTMLString if iOS < 9.
+</ul>
+
 <p><b>2.3 - 2019.08.10</b>
 <ul>
     <li>Fix typo in Appearance.html.
