- update What's new for 2.6(19).

--- a/Appearance.html
+++ b/Appearance.html
@@ -98,6 +98,11 @@ This inline video element should autoplay and shred, silently:
 <details>
 <summary><font size=4><a name="new">What's New?</a></font></summary>
 
+<p><b>2.6 - 2019.12.27</b>
+<ul>
+    <li>Because Mac Catalyst doesn't support a keyboard, remove text "or type 'a'" to toggle Appearance.
+</ul>
+
 <p><b>2.5 - 2019.10.07</b>
 <ul>
     <li>Explicitly configure WKWebView to allow inline autoplay videos for macOS and iOS.
