--- a/Appearance.html
+++ b/Appearance.html
@@ -2,15 +2,14 @@
 <html>
 
 	<head bgcolor="#000000">
+        <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta name="AppleTitle" content="Appearance Help"></meta>
         <meta name="viewport" content="initial-scale=1.0" />
 		<title>Appearance Help</title>
         <link rel="stylesheet" type="text/css" href="https://www.bigcatos.com/BigCatOs/styles/com_bigcatos_styles.css" />
         <script type="text/javascript" src="com_bigcatos_Appearance.js"></script>
 	</head>
-	<body bgcolor="#ffffff" class=container>
-		<h1><align='center'></h1>
-		<font face="HelveticaNeue-Light">
+	<body class=container style="font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', LiberationSans, sans-serif;">
 
 	<div>
 <b><font size=4><a name="toc"></a></font></b>
@@ -30,12 +29,16 @@
 
 <div style="position:relative; top:-130px; ">
 <p>Simple Light / Dark / JavaScript / HTML / Objective-C  Appearance code for iOS, macOS and Safari.
-Touch the Appearance icon to toggle the window's appearance, or type 'a'.
+Touch the Appearance icon to toggle the window's appearance.
 
 <div id=com_bigcatos_darkModeHelpDiv style="display:none; "></div>
 
 This inline video element should autoplay and shred, silently:
-<p><video autoplay loop muted playsinline  width='64' height='64' style='border-radius: 10%; ' > <source src='Shredder.mov'> </video>
+<p>
+<video poster="ShredderIcon@3x.png" autoplay loop muted playsinline  width='64' height='64' style='border-radius: 10%; ' >
+    <source src='Shredder.mov'>
+    <img src="ShredderIcon@3x.png" title="Your browser does not support the mp4 movie format">
+</video>
 
 <p><b><font size=4 color="#21adff"><a>Topics</a></font></b>
 
@@ -97,6 +100,12 @@ This inline video element should autoplay and shred, silently:
 
 <details>
 <summary><font size=4><a name="new">What's New?</a></font></summary>
+
+<p><b>2.6.1 - 2020.04.01</b>
+<ul>
+    <li>Conform with Apple's 2020.06.30 App Store guidelines.
+    <li>Update for iOS 13.4 and macOS 10.15.4.
+</ul>
 
 <p><b>2.6 - 2019.12.27</b>
 <ul>
@@ -193,7 +202,7 @@ This inline video element should autoplay and shred, silently:
 
 <p>
 <b><font size=4 color="#21adff"><a name="support">Support</a></font></b>
-<p><p style="line-height:14.4px;text-align:center;margin-bottom:0px;margin-top:0px;font-size:10px;">Copyright (&copy) 2018 - 2020 BigCatOs. All rights reserved.&nbsp;&nbsp; | &nbsp;&nbsp;<a href="mailto:support@bigcatos.com?subject=Appearance 1.fixme, Comment / Question">Contact</a>&nbsp;&nbsp; | &nbsp;&nbsp;<a href="https://www.bigcatos.com/BigCatOs/BigCatOsPrivacyPolicy.pdf">Privacy</a></p>
+<p><p style="line-height:14.4px;text-align:center;margin-bottom:0px;margin-top:0px;font-size:10px;">Copyright (&copy) 2018 - 2020 BigCatOs. All rights reserved.&nbsp;&nbsp; | &nbsp;&nbsp;<a href="mailto:support@bigcatos.com?subject=Appearance 1.fixme, Comment / Question">Contact</a></p>
 
 <p><a href="#toc" target="_self">Topics</a>
 
