--- a/Appearance.html
+++ b/Appearance.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" type="text/css" href="https://www.bigcatos.com/BigCatOs/styles/com_bigcatos_styles.css" />
         <script type="text/javascript" src="com_bigcatos_Appearance.js"></script>
 	</head>
-	<body class=container style="font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', LiberationSans, sans-serif;">
+    <body class=container style="font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', LiberationSans, sans-serif; max-width:700px; margin:0px auto; padding:8px; ">
 
 	<div>
 <b><font size=4><a name="toc"></a></font></b>
@@ -101,10 +101,11 @@ This inline video element should autoplay and shred, silently:
 <details>
 <summary><font size=4><a name="new">What's New?</a></font></summary>
 
-<p><b>2.6.1 - 2020.04.01</b>
+<p><b>2.6.1 - 2020.05.01</b>
 <ul>
+    <li>Style page width: max-width:700px; margin:0px auto; padding:8px;
     <li>Conform with Apple's 2020.06.30 App Store guidelines.
-    <li>Update for iOS 13.4 and macOS 10.15.4.
+    <li>Update for iOS 13.4.1 and macOS 10.15.4.
 </ul>
 
 <p><b>2.6 - 2019.12.27</b>
