--- a/BCOWebViewX/Credits.html
+++ b/BCOWebViewX/Credits.html
@@ -9,7 +9,7 @@
         <div style="width: 100%; height: 100%">
             <center>
                 <h3>Acknowledgments</h3>
-                <p style="margin: 4; padding: -10;">Test Credits
+                <p style="margin: 4; padding: -10;">BigCatOs Credits
             </center>
         </div>
     </body>
