--- a/BCOWebView.html
+++ b/BCOWebView.html
@@ -19,10 +19,23 @@
         <center><font size=3><b><span style="position:relative; width:128px; height:128px; left:64px; top:-150px; ">&nbsp</span></b></font></center>
         <center><font size=3><span style="position:relative; width:128px; height:128px; left:64px; top:-150px; ">1.fixme</span></font></center>
         <div style="position:relative; top:-130px; ">
-            <p>BCO take on WkWebView configured to handle Javascript Alert panels, inline videos, mailto: URLs, etc.
+            <p>BCO take on WkWebView configured to handle Javascript alert panels and WebKit messages, inline videos, mailto: URLs, etc.
             <ul>
-                <li><a onclick="alert( 'Hello, world!' )"><u>Test</u></a> JavaScript&nbsp&nbsp<i>alert( 'Hello, world!' )</i>.
-                <li>The following inline video element should autoplay and shred, silently:
+                <li>Test JavaScript interfaces:</li>
+                    <ul>
+                        <li onclick="alert( 'Hello, world!' )">alert( 'Hello, world!' )</li>
+                        <li>Talk to Obj-C via BCOWebViewSendJSMessage( msg ):</li>
+                            <ul>
+                                <li onclick="BCOWebViewSendJSMessage ( 123.456 )">123.456</li>
+                                <li onclick="BCOWebViewSendJSMessage ( 'Hello, world!' )">'Hello, world!</li>
+                                <li onclick="BCOWebViewSendJSMessage ( new Date() )">new Date()</li>
+                                <li onclick="BCOWebViewSendJSMessage ( [ 1,'hi',3 ,4 ] )">[ 1,'hi', 3, 4 ]</li>
+                                <li onclick="BCOWebViewSendJSMessage ( { k1:'v1', k2:'v2' } )">{ k1:'v1', k2:'v2' }</li>
+                                <li onclick="BCOWebViewSendJSMessage ( null )">null</li>
+                            </ul>
+                   </ul>
+                <li>From macOS use Contact link below to test mailto: with subject.
+                <li>The following inline video element should autoplay and shred, silently:</li>
                     <p>
                     <video poster="ShredderIcon@3x.png" autoplay loop muted playsinline  width='64' height='64' style='border-radius: 10%; ' >
                         <source src='Shredder.mov'>
@@ -47,9 +60,14 @@
                     <li>Typical Objective-C usage:<br>
                     <pre style="display:inline; margin-top:0; ">
 #include "BCOWebView.h"
-BCOWebView *bwv;
+__block BCOWebView *bwv;
 bwv = [[BCOWebView alloc] initWithFile:@"BCOWebView.html"
    contentController:self.view andFrame:self.view.bounds
+   scriptMessageHandler:^(WKUserContentController *__nonnull
+     userContentController, WKScriptMessage *__nonnull scriptMessage) {
+       id msgClass = [scriptMessage.body class];
+       NSLog(@"Received message of class %@:", msgClass);
+   }
    completionHandler:^(id __nullable result, NSError *__nullable error) {
        NSLog(@"BCOWebView in completion handler, result '%@'", result);
        if ( ! error ) {
@@ -71,8 +89,9 @@ bwv = [[BCOWebView alloc] initWithFile:@"BCOWebView.html"
                             Use <b>File / Export</b> to export BCOWebView files with substituted version numbers, suitable for distribution.
                             This essentially runs the following command:
                             <pre display:inline; style="margin-top:0; ">
-BCOWebView.sh srcFolder/i.app/Contents/Resources destFolder/BCOWebView-2018.12.14-08.48.03 '1.3(3)' \
-BCOwebVoew.sh BCOWebView.h BCOWebView.m BCOwebView.html BCOWebView.js
+BCOWebView.sh srcFolder/i.app/Contents/Resources \
+  destFolder/BCOWebView-2018.12.14-08.48.03 '1.3(3)' \
+  BCOwebVoew.sh BCOWebView.h BCOWebView.m BCOwebView.html BCOWebView.js
                             </pre>
                         </ul>
                         <p><a href="#toc" target="_self">Topics</a>
@@ -84,6 +103,8 @@ BCOwebVoew.sh BCOWebView.h BCOWebView.m BCOwebView.html BCOWebView.js
                 <ul>
                     <li>Use CSS styling now for dark mode, remove all old Appearance code.
                     <li>Because old Appearance configures WkWebView just how I want it, keep code and rename class to BCOWebView.
+                    <li>New option <b>scriptMessageHandler</b> to process JavaScript messages destined for the Objective-C wrapper.
+                    <li>Add more sample usage.
                     <li>Conform with Apple's 2020.06.30 App Store guidelines.
                     <li>Update for iOS 13.4.1 and macOS 10.15.4.
                 </ul>
